--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,15 +4,57 @@
 
 <div class="landing-hero">
 	<div class="container">
-		<div class="row align-items-center justify-content-between">
-			<div class="col-md-6 col-lg-5 mb-5">
-				<h1>Welcome to the crypto world</h1>
-				<p>We made sure to put everything you need in one place. Learn about crypto for free.</p>
-				<p>If you need extra help, you can subscribe for customised support.</p>
-				<p>With Tropyc, crypto becomes easy !</p>
+		<div class="row justify-content-between">
+			<div class="col-md-6 order-2 order-md-1">
+				<div class="my-2">
+					<h1>Insights & ratings for cryptocurrency</h1>
+					<p>We made sure to put everything you need in one place.</p>
+					<p>With <b>Tropyc</b>, crypto becomes easy !</p>
+					<div class="mt-4">
+						<a href="/crypto-101" class="btn btn-outline-primary mx-2" role="button">Learn crypto</a>
+						<a href="/token-sales" class="btn btn-primary mx-2" role="button">Browse ICOs</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-6 col-lg-5">
-				<img class="img-fluid" src="/images/landing-page/landing-hero.png">
+			<div class="col-md-6 order-1 order-md-2">
+				<div class="my-2">
+					<img class="img-fluid d-block mx-auto" id="landing-hero-image" src="/images/landing-page/landing-hero.png">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="landing-features">
+	<div class="curve"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-lg-3 d-flex">
+				<div class="feature-box">
+					<img class="img-fluid" src="/images/landing-page/light-bulb.png">
+					<h2>Crypto Lessons</h2>
+					<p>The crypto world can get tricky. Learn the fundamentals in our 101 series.</p>
+				</div>
+			</div>
+			<div class="col-sm-6 col-lg-3 d-flex">
+				<div class="feature-box">
+					<img class="img-fluid" src="/images/landing-page/laptop.png">
+					<h2>News & Prices</h2>
+					<p>Stay updated with the latest market alerts, prices and analyses.</p>
+				</div>
+			</div>
+			<div class="col-sm-6 col-lg-3 d-flex">
+				<div class="feature-box">
+					<img class="img-fluid" src="/images/landing-page/dashboard.png">
+					<h2>Tokensale Rating</h2>
+					<p>Browse our handpicked ICOs. No worries, we sorted out the fundamentals for you.</p>
+				</div>
+			</div>
+			<div class="col-sm-6 col-lg-3 d-flex">
+				<div class="feature-box">
+					<img class="img-fluid" src="/images/landing-page/buoy.png">
+					<h2>Life Support</h2>
+					<p>Need extra help? We’re here 7/7 to help out on any crypto related queries.</p>
+				</div>
 			</div>
 		</div>
 	</div>
