--- a/src/scss/pages/_crypto-101-list.scss
+++ b/src/scss/pages/_crypto-101-list.scss
@@ -58,11 +58,11 @@
 		font-size: 2.5rem;
 	}
 
-	.bitcoin-section, .how-to-section {
+	.a-bitcoin-section, .how-to-section {
 		box-shadow: 0px 0px 8px 1px $yellow;
 	}
 
-	.wallets-section, .token-section {
+	.b-wallets-section, .token-section {
 		position: relative;
 		z-index: 1;
 		box-shadow: 0px 0px 8px 1px $gray-600;
@@ -71,7 +71,7 @@
 			}
 	}
 
-	.ethereum-section, .invest-section	{
+	.c-ethereum-section, .invest-section	{
 		box-shadow: 0px 0px 8px 1px $blue;
 	}
 
@@ -137,11 +137,11 @@
 		font-size: 2.5rem;
 	}
 
-	.bitcoin-section, .how-to-section {
+	.a-bitcoin-section, .how-to-section {
 		box-shadow: 0px 0px 8px 1px $yellow;
 	}
 
-	.wallets-section, .token-section {
+	.b-wallets-section, .token-section {
 		position: relative;
 		z-index: 1;
 		box-shadow: 0px 0px 8px 1px $gray-600;
@@ -150,7 +150,7 @@
 			}
 	}
 
-	.ethereum-section, .invest-section	{
+	.c-ethereum-section, .invest-section	{
 		box-shadow: 0px 0px 8px 1px $blue;
 	}
 }
