--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,15 +4,15 @@
 
 <div class="landing-hero">
 	<div class="container">
-		<div class="row justify-content-between">
+		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1">
 				<div class="my-2">
 					<h1>Insights & ratings for cryptocurrency</h1>
 					<p>We made sure to put everything you need in one place.</p>
 					<p>With <b>Tropyc</b>, crypto becomes easy!</p>
 					<div class="mt-4">
-						<a href="/crypto-101" class="btn btn-outline-primary mx-2" role="button">Learn crypto</a>
-						<a href="/token-sales" class="btn btn-primary mx-2" role="button">Browse ICOs</a>
+						<a href="/crypto-101" class="btn btn-outline-primary mr-3" role="button">Learn crypto</a>
+						<a href="/token-sales" class="btn btn-primary" role="button">Browse ICOs</a>
 					</div>
 				</div>
 			</div>
