--- a/src/scss/pages/_token-sales-list.scss
+++ b/src/scss/pages/_token-sales-list.scss
@@ -1,6 +1,12 @@
 .token-sales {
 	margin: 20px 0 90px;
 
+	.top-links {
+		a {
+			font-weight: 600;
+		}
+	}
+
 	.token-sales-disclaimer {
 	  font-weight: 400;
 	}
