fix errors in tokensale mds and display bref instead of description in table

--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -37,7 +37,7 @@
 		          	</div>
 		          	<div class="content">
 		          		<a href="{{ .URL }}" class="label-emphasis">{{ .Title }}</a>
-		          		<p>{{ .Description }}</p>
+		          		<p>{{ .Params.bref }}</p>
 		          	</div>
 	          	</div>
 	          </td>
