small design changes

--- a/site/layouts/contact/single.html
+++ b/site/layouts/contact/single.html
@@ -9,33 +9,20 @@
       <p>{{.Params.description}}</p>
   </div>
   <div class="container contact">
-		<div class="row justify-content-center">
-			<div class="col-10 col-md-6 col-xl-5">
-				<div class="row justify-content-center mb-3">
-					<div class="col-6 col-sm-4 font-weight-bold">Say Hello</div>
-					<div class="col-6 col-sm-6"><a href="mailto:hello@tropyc.co">hello@tropyc.co</a></div>
+  	<div class="row justify-content-center">
+	  	<div class="col-sm-8">
+				<div class="row mb-3">
+					<div class="col-6 text-right font-weight-bold">Say Hello</div>
+					<div class="col-6"><a href="mailto:hello@tropyc.co">hello@tropyc.co</a></div>
 				</div>
-				<div class="row justify-content-center mb-3">
-					<div class="col-6 col-sm-4 font-weight-bold">Advertise</div>
-					<div class="col-6 col-sm-6"><a href="mailto:advertise@troypc.co">advertise@troypc.co</a></div>
+				<div class="row mb-3">
+					<div class="col-6 text-right font-weight-bold">Advertise</div>
+					<div class="col-6"><a href="mailto:advertise@troypc.co">advertise@troypc.co</a></div>
 				</div>
-				<div class="row justify-content-center mb-3">
-					<div class="col-6 col-sm-4 font-weight-bold">ICO & Tokensale</div>
-					<div class="col-6 col-sm-6"><a href="mailto:tokensale@tropyc.co">tokensale@tropyc.co</a></div>
+				<div class="row mb-3">
+					<div class="col-6 text-right font-weight-bold">ICO & Tokensale</div>
+					<div class="col-6"><a href="mailto:tokensale@tropyc.co">tokensale@tropyc.co</a></div>
 				</div>
-			</div>
-			<div class="col-8 col-md-6 col-xl-5 social-column">
-				<ul>
-					<li class="mb-1">
-				 		<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/social-media/telegram.svg">Join our Telegram</a>
-				 	</li>
-				 	<li class="mb-1">
-						<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/social-media/facebook.svg">Like our Facebook</a>
-					</li>
-					<li class="mb-1">
-						<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/social-media/twitter.svg">Follow us on Twitter</a>
-					</li>
-				</ul>
 			</div>
 		</div>
 	</div>
