--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -7,9 +7,10 @@
 	<div class="top-links">
 		<div class="container">
 			<div class="row my-5 text-center">
-				<div class="col-sm-4"><a href="/news/what-is-an-ico">What is an ICO?</a></div>
-				<div class="col-sm-4"><a href="/variable-description">Variable Description</a></div>
-				<div class="col-sm-4"><a href="/rating-framework">Rating Framework</a></div>
+				<div class="col-sm-3"><a href="/news/what-is-an-ico">What is an ICO?</a></div>
+				<div class="col-sm-3"><a href="/variable-description">Variable Description</a></div>
+				<div class="col-sm-3"><a href="/rating-framework">Rating Framework</a></div>
+				<div class="col-sm-3"><a href="mailto:tokensale@tropyc.co">List your token sale</a></div>
 			</div>
 		</div>
 	</div>
@@ -51,9 +52,10 @@
 	      {{ end }}
 	    </tbody>
 	  </table>
-	  <p class="token-sales-disclaimer">We have an internal selection process to filter unattractive Tokensales.<br>
-	  Listing is not endorsement - not to be considered as investment advice.</p>
-
+	  <div class="token-sales-disclaimer">
+	  	<p>We have an internal selection process to filter unattractive tokensales.</p>
+	  	<p>Listing should not be considered endorsement.</p>
+	  </div>
 	</div>
 </div>
 
