--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -249,7 +249,7 @@ $font-size-sm:   .875rem !default;
 
 $font-weight-light: 300 !default;
 $font-weight-normal: normal !default;
-$font-weight-bold: bold !default;
+$font-weight-bold: 600 !default;
 
 $font-weight-base: $font-weight-normal !default;
 $line-height-base: 1.75 !default;
