adds styling to rating framework tables

--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -1,3 +1,10 @@
-.table thead th {
-  border-top: none;
+.table {
+
+	thead th {
+  	border-top: none;
+	}
+
+  th, td {
+    vertical-align: middle;
+  }
 }
