changes % ICO to ICO/Total on token sales table and removes index coin md

--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -21,7 +21,7 @@
 	      <tr>
 	        <th class="text-left">ICO</th>
 	        <th>Valuation</th>
-	        <th>% ICO</th>
+	        <th>ICO/Total</th>
 	        <th>Start</th>
 	        <th>End</th>
 	        <th>Trust</th>
