--- a/src/scss/components/_news-categories-buttons.scss
+++ b/src/scss/components/_news-categories-buttons.scss
@@ -1,6 +1,10 @@
 .btn-altcoin, .btn-bitcoin, .btn-ico, .btn-guide, .btn-bank, .btn-tech {
+	padding: .2rem .4rem;
+  font-size: .8rem;
+  line-height: 1.2;
+  border-radius: .2rem;
 	color: #FFF;
-	min-width: 75px;
+	min-width: 60px;
 	font-weight: 600;
 	font-family: "Nunito";
 
