--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -3,7 +3,7 @@
 
 {{ define "main" }}
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
   	<div class="col-lg-8">
 	  	<div class="news">
