--- a/site/layouts/partials/article-featured.html
+++ b/site/layouts/partials/article-featured.html
@@ -4,10 +4,14 @@
 			<img src="{{ (printf "%s" .Params.images | urlize) | relURL }}" alt="{{ .Params.title }}">
 		</div>
 		<div class="article-info">
-			<h3>{{ .Title }}</h3>
-			{{ range .Params.categories }}
-				<div class="btn btn-sm btn-{{ . | lower }} float-right mx-1">{{ . | upper }}</div>
-			{{ end }}
+			<div class="d-flex">
+				<h3>{{ .Title }}</h3>
+				<div class="ml-auto">
+				{{ range .Params.categories }}
+					<div class="btn btn-{{ . | lower }} mx-1">{{ . | upper }}</div>
+				{{ end }}
+				</div>
+			</div>
 			<div class="article-meta">{{ partial "article/meta" . }}</div>
 		</div>
 	</a>
