--- a/site/layouts/partials/article.html
+++ b/site/layouts/partials/article.html
@@ -5,12 +5,14 @@
 		</a>
 	</div>
 	<div class="article-info">
-		<h3>
-			<a href="{{ .URL }}" title="{{ .Title }}">{{ .Title }}</a>
-			{{ range .Params.categories }}
-				<a href="/categories/{{ . | urlize }}" class="btn btn-sm btn-{{ . | lower }} float-right mx-1">{{ . | upper }}</a>
-			{{ end }}
-		</h3>
+		<div class="d-flex">
+			<h3 class="mr-2"><a href="{{ .URL }}" title="{{ .Title }}">{{ .Title }}</a></h3>
+			<div class="ml-auto">
+				{{ range .Params.categories }}
+					<a href="/categories/{{ . | urlize }}" class="btn btn-{{ . | lower }} mx-1">{{ . | upper }}</a>
+				{{ end }}
+			</div>
+		</div>
 		<div class="article-meta">{{ partial "article/meta" . }}</div>
 		<p>{{ .Description }}</p>
 	</div>
