adds token sale listing page

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -17,6 +17,7 @@
 			<div class="col-md-6 col-lg-3">
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
+					<li><a href="/token-sale-listing">List your token sale</a></li>
 					<li><a href="/rating-framework/">Rating Framework</a></li>
 					<li><a href="/variable-description/">Variable Description</a></li>
 					<li><a href="/disclaimer/">Disclaimer</a></li>
