--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -10,7 +10,7 @@
 				<div class="col-sm-3"><a href="/news/what-is-an-ico">What is an ICO?</a></div>
 				<div class="col-sm-3"><a href="/variable-description">Variable Description</a></div>
 				<div class="col-sm-3"><a href="/rating-framework">Rating Framework</a></div>
-				<div class="col-sm-3"><a href="mailto:tokensale@tropyc.co">List your token sale</a></div>
+				<div class="col-sm-3"><a href="/token-sale-listing">List your token sale</a></div>
 			</div>
 		</div>
 	</div>
@@ -53,7 +53,7 @@
 	    </tbody>
 	  </table>
 	  <div class="token-sales-disclaimer">
-	  	<p>We have an internal selection process to filter unattractive tokensales.</p>
+	  	<p>We have an internal selection process to filter unattractive token sales.</p>
 	  	<p>Listing should not be considered endorsement.</p>
 	  </div>
 	</div>
