--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -249,16 +249,16 @@ $font-size-sm:   .875rem !default;
 
 $font-weight-light: 300 !default;
 $font-weight-normal: normal !default;
-$font-weight-bold: 600 !default;
+$font-weight-bold: bold !default;
 
 $font-weight-base: $font-weight-normal !default;
 $line-height-base: 1.75 !default;
 
-$h1-font-size: 2rem !default;
-$h2-font-size: 1.75rem !default;
-$h3-font-size: 1.4rem !default;
-$h4-font-size: 1.2rem !default;
-$h5-font-size: 1.1rem !default;
+$h1-font-size: 2.5rem !default;
+$h2-font-size: 2rem !default;
+$h3-font-size: 1.75rem !default;
+$h4-font-size: 1.5rem !default;
+$h5-font-size: 1.25rem !default;
 $h6-font-size: 1rem !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
