--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,13 +14,11 @@ strong {
 
 .content {
 	h2:not(:first-child) {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
+    margin-top: 2rem;
   }
 
-  h3 {
+  h3, h4, h5, h6 {
     margin-top: 1.5rem;
-    margin-bottom: 1rem;
   }
 
   p {
