adds link and styling to feature boxes on landing

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -18,8 +18,8 @@
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
 					<li><a href="/token-sale-listing">List your token sale</a></li>
-					<li><a href="/rating-framework/">Rating Framework</a></li>
-					<li><a href="/variable-description/">Variable Description</a></li>
+					<li><a href="/rating-framework/">Rating framework</a></li>
+					<li><a href="/variable-description/">Variable description</a></li>
 					<li><a href="/disclaimer/">Disclaimer</a></li>
 				</ul>
 			</div>
