--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -31,29 +31,33 @@
 			<div class="col-sm-6 col-lg-3 d-flex">
 				<div class="feature-box">
 					<img class="img-fluid" src="/images/landing-page/laptop.png">
-					<h2>News & Prices</h2>
+					<h2>News</h2>
 					<p>Stay updated with the latest market alerts, prices and analyses.</p>
+					<a href="/news"></a>
 				</div>
 			</div>
 			<div class="col-sm-6 col-lg-3 d-flex">
 				<div class="feature-box">
 					<img class="img-fluid" src="/images/landing-page/light-bulb.png">
-					<h2>Crypto Lessons</h2>
+					<h2>Crypto lessons</h2>
 					<p>The crypto world can get tricky. Learn the fundamentals in our 101 series.</p>
+					<a href="/crypto-101"></a>
 				</div>
 			</div>
 			<div class="col-sm-6 col-lg-3 d-flex">
 				<div class="feature-box">
 					<img class="img-fluid" src="/images/landing-page/dashboard.png">
-					<h2>Token sale Rating</h2>
+					<h2>Token sale rating</h2>
 					<p>Browse our handpicked ICOs. No worries, we sorted out the fundamentals for you.</p>
+					<a href="/token-sales"></a>
 				</div>
 			</div>
 			<div class="col-sm-6 col-lg-3 d-flex">
 				<div class="feature-box">
 					<img class="img-fluid" src="/images/landing-page/buoy.png">
-					<h2>Life Support</h2>
+					<h2>Life support</h2>
 					<p>Need extra help? We’re here 7/7 to help out on any crypto related queries.</p>
+					<a href="/premium"></a>
 				</div>
 			</div>
 		</div>
