--- a/site/layouts/crypto-101/list.html
+++ b/site/layouts/crypto-101/list.html
@@ -3,57 +3,41 @@
 {{ define "main"}}
 
 {{ if .Sections }}
-	<div class="crypto-all">
+	<div class="crypto-101">
 		<div class="container">
-			<div class="row no-gutters">
-				{{ range first 3 .Sections }}
-					<div class="col-xs-12 col-md-4">
-						<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
+			<div class="sections-flex">
+				{{ range .Sections }}
+					<div>
+						<div class="section mb-3">
 							<img class="img-fluid" src="/images/{{ (printf "crypto-101/summary-icons/%s.png" .Params.image) }}">
+							<span>{{ .Params.bref }}</span>
 							<h2>{{ .Title }}</h2>
 							<ul>
 								{{ range .Data.Pages.ByDate }}
-								<li><a href="{{ .URL }}">{{ .Title }}</a></li>
+									<li><a href="{{ .URL }}">{{ .Title }}</a></li>
 								{{ end }}
 							</ul>
 						</div>
 					</div>
 				{{ end }}
 			</div>
-			<h2 class="seperator-header">Go to 102.</h2>
-			<div class="row no-gutters">
-				{{ range last 3 .Sections }}
-					<div class="col-xs-12 col-md-4">
-						<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
-							<img class="img-fluid" src="/images/{{ (printf "crypto-101/summary-icons/%s.png" .Params.image) }}">
-							<h2>{{ .Title }}</h2>
-							<ul>
-								{{ range .Data.Pages.ByDate }}
-								<li><a class="disabled" href="#" disabled>{{ .Title }} <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
-								{{ end }}
-							</ul>
-						</div>
-					</div>
-				{{ end }}
-			</div>
-			<p class="info-content"><i class="fa fa-info-circle" aria-hidden="true"></i> Coming soon!</p>
 		</div>
 	</div>
 {{ else }}
-	<div class="crypto-section">
+	<div class="crypto-101">
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-6">
-					<div class="section {{ (printf "%s-section" .Title | urlize) }} d-flex flex-column justify-content-around align-items-center mb-3">
-						<img class="img-fluid" src="/images/{{ (printf "crypto-101/summary-icons/%s.png" .Params.image) }}">
-						<h2>{{ .Title }}</h2>
-						<ul>
-							{{ range .Data.Pages.ByDate }}
-							<li><a href="{{ .URL }}">{{ .Title }}</a></li>
-							{{ end }}
-						</ul>
+			<div class="pages-flex">
+				{{ range .Data.Pages.ByDate }}
+					<div>
+						<div class="page mb-3">
+							<img class="img-fluid" src="/images/{{ (printf "crypto-101/summary-icons/%s.png" .Params.image) }}">
+							<span>{{ .Params.bref }}</span>
+							<h2>{{ .Title }}</h2>
+							<p>{{ .Description }}</p>
+							<a href="{{ .URL }}"></a>
+						</div>
 					</div>
-				</div>
+				{{ end }}
 			</div>
 		</div>
 	</div>
