token sale single redesign WIP

--- a/site/layouts/partials/rating.html
+++ b/site/layouts/partials/rating.html
@@ -1,4 +1,4 @@
 
-<span class="{{ if in . "A" }}text-success{{ else if in . "B" }}text-warning{{ else if in . "C" }}text-danger{{ end }} rating">
+<span class="{{ if in . "A" }}text-success{{ else if in . "B" }}text-warning{{ else if in . "C" }}text-danger{{ end }}">
 {{ . }}
 </span>
