--- a/src/scss/pages/_token-sales-single.scss
+++ b/src/scss/pages/_token-sales-single.scss
@@ -1,147 +1,420 @@
-.token-detail-content {
-  margin-top: 45px;
+.token-sale-single {
+	.profile-header {
+		.image {
+			margin-top: 30px;
+
+			img {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
+
+		.info-main {
+			margin-top: 30px;
+			display: flex;
+
+			.details {
+				margin-right: 1rem;
+
+				h1 {
+					font-size: 2rem;
+					font-weight: 700;
+				}
+
+				h2 {
+					font-size: 1.2rem;
+					color: $gray-700;
+				}
+
+				p {
+					color: $gray-600;
+					font-size: 0.8rem;
+				}
+			}
+
+			.ratings {
+				.ratings-box {
+					display: flex;
+					border: 1px solid $gray-300;
+					border-radius: 0.25rem;
+					padding: 0.75rem 0;
+					font-family: "Nunito";
+					text-align: center;
+
+					.rating {
+						padding: 0 1rem;
+
+						.rating-name {
+							font-size: 1.25rem;
+							font-weight: 700;
+							text-transform: uppercase;
+						}
+
+						.rating-mark {
+							font-size: 3rem;
+							font-weight: 800;
+						}
+
+						&:first-child {
+							border-right: 1px solid $gray-300;
+						}
+					}
+				}
+			}
+		}
+
+		.info-secondary {
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: 15px;
+			border: 1px solid $gray-300;
+			border-radius: 0.25rem;
+			padding: 2rem;
+			font-weight: 600;
+
+			.date-box {
+				display: flex;
+				justify-content: space-between;
+			}
+
+			.info-row {
+				margin-bottom: 0.5rem;
+
+				div:first-child {
+					font-size: 0.7rem;
+					text-transform: uppercase;
+					color: $gray-600;
+				}
+
+				div:nth-child(2) {
+					font-size: 0.8rem;
+				}
+			}
+
+			a {
+				margin-top: 0.5rem;
+				width: 100%;
+			}
+		}
+
+		.socials {
+			.twitter {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.facebook {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.reddit {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.github {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.telegram {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.slack {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+
+			.medium {
+		    width: 20px;
+		    height: 20px;
+		    display: inline-block;
+		    background: url(../images/sprite.svg) no-repeat;
+		    background-size: 400px 400px;
+		    background-position: -218px 0px;
+		    text-decoration: none;
+		    text-indent: -99999px;
+		    margin-right: 10px;
+			}
+		}
+
+		.video {
+			margin-top: 15px;
+			width: 100%;
+			border-radius: 0.25rem;
+
+			iframe {
+				width: 100%;
+				height: 400px;
+			}
+		}
+	}
+
+	.profile-content {
+		.twitter-feed {
+			margin-top: 15px;
+			border: 1px solid $gray-300;
+			border-radius: 0.25rem;
+		}
+
+		.tabs {
+			margin-top: 15px;
+
+			nav {
+				a {
+					display: block;
+					flex: 1;
+					padding: .5rem 1rem;
+					color: $gray-900;
+					text-align: center;
+					font-weight: 600;
+					font-size: 0.9rem;
+					text-decoration: none;
+				}
+
+				a.active {
+					color: theme-color("primary");
+					border-bottom: 2px solid theme-color("primary");
+				}
+			}
+		}
+
+		.tab-content {
+			margin-top: 10px;
+
+			#nav-financial {
+				.financial-flex {
+					display: flex;
+					flex-wrap: wrap;
+
+					.valuation {
+						flex: 2;
+						margin-top: 10px;
+    				margin-right: 1rem;
+						padding-right: 1rem;
+					}
+
+					.fund-allocation {
+						margin-top: 10px;
+						flex: 1;
+					}
+				}
+
+				.financial-table {
+					width: 100%;
+    			max-width: 100%;
+    			color: $gray-700;
+
+    			th, td {
+    				padding: 0.25rem;
+    			}
+
+					thead tr th {
+						padding-bottom: 1rem;
+						font-size: 0.7rem;
+						text-align: left;
+						text-transform: uppercase;
+					}
+
+					tbody {
+						font-size: 0.9rem;
+					}
+				}
+			}
+		}
+	}
 }
 
-.token-id {
-  margin-bottom: 30px;
-  text-align: center;
+// .token-detail-content {
+//   margin-top: 45px;
+// }
 
-   @include media-breakpoint-down(md) {
-    text-align: left;
-  }
-}
+// .token-id {
+//   margin-bottom: 30px;
+//   text-align: center;
 
-.token-title {
-  margin-top: 15px;
-  font-size: 1.5rem;
-  color: $gray-600;
-}
+//    @include media-breakpoint-down(md) {
+//     text-align: left;
+//   }
+// }
 
-.token-logo {
-  height: 70px;
-}
+// .token-title {
+//   margin-top: 15px;
+//   font-size: 1.5rem;
+//   color: $gray-600;
+// }
 
-.token-overview {
-  margin-bottom: 25px;
-  padding: 20px;
-  border: 1px solid #DDD;
-  border-radius: .25rem;
+// .token-logo {
+//   height: 70px;
+// }
 
-  h2 {
-  	margin-bottom: 2rem;
-  	color: $gray-600;
-  }
-}
+// .token-overview {
+//   margin-bottom: 25px;
+//   padding: 20px;
+//   border: 1px solid #DDD;
+//   border-radius: .25rem;
 
-.token-description {
-	margin-bottom: 50px;
+//   h2 {
+//   	margin-bottom: 2rem;
+//   	color: $gray-600;
+//   }
+// }
 
-  .tab-content {
-    padding: 20px;
-    border: solid #DDD;
-    border-width: 0 1px 1px 1px;
-    border-bottom-left-radius: .25rem;
-    border-bottom-right-radius: .25rem;
-  }
+// .token-description {
+// 	margin-bottom: 50px;
 
-  .nav-link {
-    background-color: #EFEFEF;
-    border-color: #DDD;
-  }
-}
+//   .tab-content {
+//     padding: 20px;
+//     border: solid #DDD;
+//     border-width: 0 1px 1px 1px;
+//     border-bottom-left-radius: .25rem;
+//     border-bottom-right-radius: .25rem;
+//   }
 
-.indicator-value {
-  text-align: center;
-  vertical-align: middle;
-  font-size: 1.2rem;
-  font-weight: 400;
-  color: #6f8691;
-}
+//   .nav-link {
+//     background-color: #EFEFEF;
+//     border-color: #DDD;
+//   }
+// }
 
-.indicator-rating {
-  text-align: center;
-  vertical-align: middle;
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: $gray-600;
-}
+// .indicator-value {
+//   text-align: center;
+//   vertical-align: middle;
+//   font-size: 1.2rem;
+//   font-weight: 400;
+//   color: #6f8691;
+// }
 
-.deal-table {
-  @include media-breakpoint-down(sm) {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-  }
+// .indicator-rating {
+//   text-align: center;
+//   vertical-align: middle;
+//   font-size: 1.2rem;
+//   font-weight: 500;
+//   color: $gray-600;
+// }
 
-  th {
-  	border-top: none;
-  }
+// .deal-table {
+//   @include media-breakpoint-down(sm) {
+//     display: block;
+//     width: 100%;
+//     overflow-x: auto;
+//   }
 
-  tbody > tr:last-child td {
-    border-width: 2px;
-  }
+//   th {
+//   	border-top: none;
+//   }
 
-  .tokensale-row {
-		color: $green;
-  }
+//   tbody > tr:last-child td {
+//     border-width: 2px;
+//   }
 
-  .total-row {
-  	font-weight: 600;
-  }
-}
+//   .tokensale-row {
+// 		color: $green;
+//   }
 
-.roadmap {
-  display: flex;
-  height: 300px;
+//   .total-row {
+//   	font-weight: 600;
+//   }
+// }
 
-  @include media-breakpoint-down(sm) {
-    flex-direction: column;
-    height: 900px;
-  }
+// .roadmap {
+//   display: flex;
+//   height: 300px;
 
-  .roadmap-ideation, .roadmap-mvp, .roadmap-test, .roadmap-growth {
-    flex: 25%;
-    text-align: center;
-    border: 1px solid #DDD;
-    padding: 20px 0;
-    position: relative;
-  }
+//   @include media-breakpoint-down(sm) {
+//     flex-direction: column;
+//     height: 900px;
+//   }
 
-  .roadmap-stage {
-    font-size: 16px;
-    font-weight: 400;
-    color: $gray-600;
-  }
+//   .roadmap-ideation, .roadmap-mvp, .roadmap-test, .roadmap-growth {
+//     flex: 25%;
+//     text-align: center;
+//     border: 1px solid #DDD;
+//     padding: 20px 0;
+//     position: relative;
+//   }
 
-  .roadmap-image {
-  	position: absolute;
-  	margin-left: auto;
-  	margin-right: auto;
-  	left: 0;
-    right: 0;
-    top: 30%;
-  	height: 80px;
-  }
+//   .roadmap-stage {
+//     font-size: 16px;
+//     font-weight: 400;
+//     color: $gray-600;
+//   }
 
-  .roadmap-bottom-left {
-    position: absolute;
-    left: 10%;
-    bottom: 10%;
-    font-size: 14px;
+//   .roadmap-image {
+//   	position: absolute;
+//   	margin-left: auto;
+//   	margin-right: auto;
+//   	left: 0;
+//     right: 0;
+//     top: 30%;
+//   	height: 80px;
+//   }
 
-    @include media-breakpoint-only(md) {
-      font-size: 12px;
-    }
-  }
+//   .roadmap-bottom-left {
+//     position: absolute;
+//     left: 10%;
+//     bottom: 10%;
+//     font-size: 14px;
 
-  .roadmap-bottom-right {
-    position: absolute;
-    right: 10%;
-    bottom: 10%;
-    font-size: 14px;
+//     @include media-breakpoint-only(md) {
+//       font-size: 12px;
+//     }
+//   }
 
-    @include media-breakpoint-only(md) {
-      font-size: 12px;
-    }
-  }
-}
+//   .roadmap-bottom-right {
+//     position: absolute;
+//     right: 10%;
+//     bottom: 10%;
+//     font-size: 14px;
+
+//     @include media-breakpoint-only(md) {
+//       font-size: 12px;
+//     }
+//   }
+// }
