--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -42,8 +42,8 @@
 		          	</div>
 	          	</div>
 	          </td>
-	          <td class="{{ .Params.deal.headers.valuationHeader }}">{{ .Params.deal.rows.total.value }}</td>
-	          <td>{{ .Params.deal.rows.tokensale.cut }}</td>
+	          <td class="{{ .Params.deal.headers.valuationHeader }}">{{ .Params.valuation.rows.total.value }}</td>
+	          <td>{{ .Params.valuation.rows.tokensale.cut }}</td>
 		        <td>{{ .Params.startDate | dateFormat "02/01/2006" }}</td>
 	          <td>{{ .Params.endDate | dateFormat "02/01/2006" }}</td>
 	          <td>{{ partial "rating" .Params.trustRating }}</td>
